--- a/style.css
+++ b/style.css
@@ -1,23 +1,20 @@
 body{
     font-family: latha;
-    color: green;
-}
+    color: green;}
+
 
 body h1{
-    font-size: 50px;
-}
+    font-size: 50px;}
 
 body h2{
-    font-size: 30px;
-}
+    font-size: 30px;}
 
 body h3{
-    font-size:25 ;
-}
+    font-size:25 ;}
 
 body p{
     font-size:20px ;
-}
+    font-family: 'Poppins', sans-serif;}
 
 #heading{
     width: 50%;
@@ -25,8 +22,7 @@ body p{
    
     opacity: 0.9;
     padding: 2px ;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
 
 
 
@@ -37,54 +33,45 @@ body p{
     opacity: 0.9;
     padding: 2px; 
     background-color: white ;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
+    font-family: Georgia, 'Times New Roman', Times, serif}
 
 #box ul li {
     width:120px ;
     float: left;
     margin:10px auto ;
-    text-align: center;
-}
+    text-align: center;}
 
 
 #box ul li a {
     text-decoration: none;
-    color:black ;
-}
+    color:black ;}
 
 #box ul li:hover{
-    background-color: darkgreen;
-}
+    background-color: darkgreen;}
 
 
 
 #box ul li a:hover{
-    color: white;
-}
+    color: white;}
 
 
 #first{
     display: flex;
-    margin-bottom: 150px;
-}
+    margin-bottom: 150px;}
 
 #first h1{
-    color: orange;
-}
+    color: orange;}
 
 
 .half-width{
     width:50%;
     height:200px;
     padding: 100px;
-    margin-bottom: 150px;
-}
+    margin-bottom: 200px;}
 
 .half-width img{
     width: 50%;
-    height: 400px;;
-}
+    height: 400px;;}
 
 .link-button{
     text-decoration: none;
@@ -95,49 +82,38 @@ body p{
     padding-right: 40px;
     padding-top:15px; 
     padding-bottom: 15px;
-    border-radius:5px;
-}
+    border-radius:5px;}
 
 
 
 #about-us{
     display: flex;
-    background-image: url(Frame\ 58.jpg);
+    background-image: url(Frame\ 57.jpg);
     background-repeat: no-repeat;
     background-position :center;
-    padding:10px ;
-    
-    
-}
+    padding:10px ;}
 
 #our{
-    text-align: center;
-}
-
-
-
+    text-align: center;}
 
 
 .recipies img{
     width: 100%;
-    height:70%;
-    
-}
+    height:70%;}
 
 
+.recipies{
+    box-shadow: 10px 10px 40px gray;}
 
 #item{
-    display: flex;
-}
+    display: flex;}
 
 #item div{
-    border:2px solid black;
+    border:2px solid whitesmoke;
     border-radius: 10px;
     margin-left: 10px;
     margin-right: 10px;
-    padding: 12px;
-
-}
+    padding: 12px;}
 
 
 
@@ -146,15 +122,15 @@ body p{
     width:auto;
     text-align: center;
     opacity: 0.9;
-    border: 1px solid black;
-    border-radius: 2px;
+    border: 5px solid white;
+    border-radius: 10px;
     margin-left: 25%;
     margin-right: 25%;
     margin-bottom: 40px;
     padding: 2px; 
-    background-color:black;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
+    background-color:white;
+    box-shadow: 10px 10px 40px gray;
+    font-family: Georgia, 'Times New Roman', Times, serif;}
 
 #reviews div{
     width:50% ;
@@ -165,16 +141,35 @@ body p{
     padding-right: 10px;
     padding-top:0;
     padding-bottom: 0;
-}
+    color: crimson;}
 
 
+#team{
+    text-align: center;
+    color: black;}
 
+
+#customer{
+    display: flex;
+    text-align: center;}
+
+#customer div{
+    border: 2px solid white;
+    margin-left: 20px;
+    margin-right:20px ;
+    margin-bottom: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-shadow: 10px 10px 40px gray;
+    color: black;}
 
 
 #last{
     background-color: black;
     border: 4px;
     text-align: center;
+    color: crimson;}
 
-}
+
+
 
